# devtools_scicomp_project_2025

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  results.py  test.py  train.py
.github/workflows/: python-app.yml
experiments/: config_spambase.yaml
logs/: numpy_knn_classifier.txt  slow_knn_classifier.txt  spam_numba_knn_classifier.txt  spam_numpy_knn_classifier.txt
logs/test/: profile_0_1000.txt  profile_0_1500.txt  profile_0_2000.txt  profile_0_2500.txt  profile_0_3000.txt  profile_0_3586.txt  profile_0_500.txt  profile_32_3000.txt
logs/train/: profile_0_1000.txt  profile_0_1500.txt  profile_0_2000.txt  profile_0_2500.txt  profile_0_3000.txt  profile_0_3586.txt  profile_0_500.txt  profile_32_3000.txt
losses/test/0/: losses_1000.csv  losses_1500.csv  losses_2000.csv  losses_2500.csv  losses_3000.csv  losses_3586.csv  losses_500.csv
losses/test/32/: losses_1000.csv  losses_1500.csv  losses_2000.csv  losses_2500.csv  losses_3000.csv  losses_500.csv
losses/train/0/: losses_1000.csv  losses_1500.csv  losses_2000.csv  losses_2500.csv  losses_3000.csv  losses_3586.csv  losses_500.csv
losses/train/32/: losses_1000.csv  losses_1500.csv  losses_2000.csv  losses_2500.csv  losses_3000.csv  losses_500.csv
preprocess/: preprocess.py
scripts/: run.py  scalability.py
shell/: download.sh  submit.sh  submit_spam.sh
src/pyclassify/: __init__.py  _compile_numba.py  classifier.py  utils.py
src/upt/models/: approximator.py  decoder.py  encoder.py  model.py
test/: test_.py
workflows/: python-app.yml
yamls/: config.yaml
(+2 files in other folders)
